# labelcomposer

./: .gitignore  LICENSE.txt  README.md  pyproject.toml
src/labelcomposer/: __about__.py  __init__.py  helpers.py  label.py
tests/: __init__.py  test_helpers.py  test_labels.py
