[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "labelcomposer"
dynamic = ["version"]
description = 'A small toolkit to design new label hierarchies composed from fundamental user annotation classes'
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [{ name = "Larissa Heinrich", email = "heinrichl@janelia.hhmi.org" }]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = ["typeguard >= 4.0.0"]

[project.urls]
Documentation = "https://github.com/saalfeldlab/labelcomposer#readme"
Issues = "https://github.com/saalfeldlab/labelcomposer/issues"
Source = "https://github.com/saalfeldlab/labelcomposer"

[tool.hatch.version]
path = "src/labelcomposer/__about__.py"

[tool.hatch.envs.default]
dependencies = []
python = "3.8"
type = "conda"
command = "mamba"

[tool.hatch.envs.test]
template = "default"
dependencies = ["coverage[toml]>=6.5", "pytest", "mypy>=1.0.0"]

[tool.hatch.envs.test.scripts]
test = "pytest {args:tests}"
test-cov = "coverage run -m pytest {args:tests}"
cov-report = ["- coverage combine", "coverage report"]
cov = ["test-cov", "cov-report"]
typing = "mypy --install-types --non-interactive {args:src/labelcomposer tests}"

[tool.hatch.envs.lint]
type = "conda"
command = "mamba"
detached = true
name = "labelcomposer_lint"
dependencies = ["black>=23.1.0", "ruff>=0.0.243"]

[tool.hatch.envs.lint.scripts]
style = ["ruff {args:.}", "black --check --diff {args:.}"]
fmt = ["black {args:.}", "ruff --fix {args:.}", "style"]
all = ["style"]

[tool.black]
target-version = ["py37"]
line-length = 120
skip-string-normalization = true

[tool.ruff]
target-version = "py37"
line-length = 120
select = [
  "A",
  "ARG",
  "B",
  "C",
  "DTZ",
  "E",
  "EM",
  "F",
  "FBT",
  "I",
  "ICN",
  "ISC",
  "N",
  "PLC",
  "PLE",
  "PLR",
  "PLW",
  "Q",
  "RUF",
  "S",
  "T",
  "TID",
  "UP",
  "W",
  "YTT",
]
ignore = [
  # Allow non-abstract empty methods in abstract base classes
  "B027",
  # Allow boolean positional values in function calls, like `dict.get(... True)`
  "FBT003",
  # Ignore checks for possible passwords
  "S105",
  "S106",
  "S107",
  # Ignore complexity
  "C901",
  "PLR0911",
  "PLR0912",
  "PLR0913",
  "PLR0915",
]
unfixable = [
  # Don't touch unused imports
  "F401",
]

[tool.ruff.isort]
known-first-party = ["labelcomposer"]

[tool.ruff.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.per-file-ignores]
# Tests can use magic values, assertions, and relative imports
"tests/**/*" = ["PLR2004", "S101", "TID252"]

[tool.coverage.run]
source_pkgs = ["labelcomposer", "tests"]
branch = true
parallel = true
omit = ["src/labelcomposer/__about__.py"]

[tool.coverage.paths]
labelcomposer = ["src/labelcomposer", "*/labelcomposer/src/labelcomposer"]
tests = ["tests", "*/labelcomposer/tests"]

[tool.coverage.report]
exclude_lines = ["no cov", "if __name__ == .__main__.:", "if TYPE_CHECKING:"]
